--- a/photographer/main.css
+++ b/photographer/main.css
@@ -8,6 +8,13 @@
   src: url('fonts/IniyaDisplay.otf');
 }
 
+.aaa {
+  width: 50px;
+  height: 50px;
+  background-color: green;
+}
+
+
 body{
   margin: 0;
   padding: 0;
